--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -73,7 +73,7 @@ We start by loading the necessary packages, reading in the breast cancer data
 from the previous chapter, and making a quick scatter plot visualization of
 tumor cell concavity versus smoothness colored by diagnosis in Figure \@ref(fig:06-precode).
 
-```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatter plot of tumor cell concavity versus smoothness coloured by diagnosis label", message = F, warning = F}
+```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatter plot of tumor cell concavity versus smoothness colored by diagnosis label", message = F, warning = F}
 # load packages
 library(tidyverse)
 library(tidymodels)
@@ -214,11 +214,11 @@ knn_fit <- workflow() |>
 knn_fit
 ```
 
-> Note: Here again you see the `set.seed` function. In the $K$-nearest neighbors algorithm, 
+> Note: Here again you see the `set.seed` function because in the $K$-nearest neighbors algorithm, 
 > if there is a tie for the majority neighbor class, the winner is randomly selected. Although there is no chance
 > of a tie when $K$ is odd (here $K=3$), it is possible that the code may be changed in the future to have an even value of $K$. 
 > Thus, to prevent potential issues with reproducibility, we have set the seed. Note that in your own code,
-> you should have to set the seed once at the beginning of your analysis. 
+> you should only set the seed once at the beginning of your analysis. 
 
 ### Predict the labels in the test set
 
