better db caveat; better db argument explanations

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -593,23 +593,24 @@ and accessed on a network. This means that you have to provide more information
 to R when connecting to Postgres databases. The additional information that you
 need to include when you call the `dbConnect` function is listed below:
 
-- `dbname` - the name of the database (a single PostgreSQL instance can host more than one database)
-- `host` - the URL pointing to where the database is located
-- `port` - the communication endpoint between R and the PostgreSQL database (this is typically 5432 for PostgreSQL)
-- `user` - the username for accessing the database
-- `password` - the password for accessing the database
-
+- `dbname`: the name of the database (a single PostgreSQL instance can host more than one database)
+- `host`: the URL pointing to where the database is located
+- `port`: the communication endpoint between R and the PostgreSQL database (usually `5432`)
+- `user`: the username for accessing the database
+- `password`: the password for accessing the database
 
 Additionally, we must use the `RPostgres` package instead of `RSQLite` in the
 `dbConnect` function call.  Below we demonstrate how to connect to a version of
-the `can_mov_db` database, which contains information about Canadian movies
-(*note - this is a synthetic database*).
+the `can_mov_db` database, which contains information about Canadian movies.
+Note that the `host` (`fakeserver.stat.ubc.ca`), `user` (`user0001`), and 
+`password` (`abc123`) below are *not real*; you will not actually 
+be able to connect to a database using this information.
 
 ```{r, eval = FALSE}
 library(RPostgres)
 can_mov_db_con <- dbConnect(RPostgres::Postgres(), dbname = "can_mov_db",
-                        host = "r7k3-mds1.stat.ubc.ca", port = 5432,
-                        user = "user0001", password = '################')
+                        host = "fakeserver.stat.ubc.ca", port = 5432,
+                        user = "user0001", password = "abc123")
 ```
 
 ### Interacting with a database
