dealt with feedback on outliers and multicollin

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -510,8 +510,9 @@ test data.
 
 ## Multicollinearity and outliers
 
-What can go wrong when performing (multivariate) linear regression? 
-Two common issues to be mindful of are *outliers* and, in the multivarate case, *collinear predictors*.
+What can go wrong when performing (possibly multivariate) linear regression? 
+This section will introduce two common issues&mdash;*outliers* and *collinear predictors*&mdash;and 
+illustrate their impact on predictions.
 
 ### Outliers
 
@@ -576,13 +577,15 @@ lm_plot_outlier_large
 
 ### Multicollinearity
 
-The second, and much more subtle, issue can occur when performing multivariate linear regression.
-In particular, if you include multiple predictors that are strongly linearly related to one another,
-the coefficients that describe the plane of best fit can be very unstable. Consider
-an extreme example using the Sacramento housing data where the house was measured twice
-by two people.
-Since the two people are each slightly inaccurate, the two measurements might not agree exactly,
-but they are very strongly linearly related to each other, as shown in Figure \@ref(fig:08-lm-multicol).
+The second, and much more subtle, issue can occur when performing multivariate
+linear regression.  In particular, if you include multiple predictors that are
+strongly linearly related to one another, the coefficients that describe the
+plane of best fit can be very unreliable&mdash;small changes to the data can
+result in large changes in the coefficients. Consider an extreme example using
+the Sacramento housing data where the house was measured twice by two people.
+Since the two people are each slightly inaccurate, the two measurements might
+not agree exactly, but they are very strongly linearly related to each other,
+as shown in Figure \@ref(fig:08-lm-multicol).
 
 ```{r 08-lm-multicol, fig.height = 4, fig.width = 5, warning = FALSE, echo = FALSE, fig.cap = "Scatter plot of the with possible outlier highlighted in red"}
 
@@ -643,7 +646,8 @@ Best Fit 2: $\text{house sale price} = `r icept2` + `r sqft2`\cdot (\text{house 
 Best Fit 3: $\text{house sale price} = `r icept3` + `r sqft3`\cdot (\text{house size 1 (ft$^2$)}) + `r sqft33` \cdot (\text{house size 2 (ft$^2$)}).$
 
 Therefore, when performing multivariate linear regression, it is important to avoid including very
-linearly related predictors. 
+linearly related predictors. However, techniques for doing so are beyond the scope of this
+book; see the list of additional resources at the end of this chapter to find out where you can learn more.
 
 ## Designing new predictors
 
@@ -662,12 +666,17 @@ There are, however, a wide variety of cases where the predictor variables do hav
 meaningful relationship with the response variable, but that relationship does not fit
 the assumptions of the regression method you have chosen. For example, a dataframe `df`
 with two variables---`x` and `y`---with a nonlinear relationship between the two variables
-will not be correctly captured by simple linear regression, as shown in Figure \@ref(fig:08-predictor-design).
-<center>
-```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Example of a dataset with a nonlinear relationship between the predictor and the response"}
+will not be fully captured by simple linear regression, as shown in Figure \@ref(fig:08-predictor-design).
+```{r 08-predictor-design-df, echo = FALSE, message = FALSE, warning = FALSE}
 set.seed(1)
 df = tibble(x = sample(10000, 100, replace=TRUE)/10000)
 df <- df |> mutate(y = x^3 + 0.2*sample(10000, 100, replace=TRUE)/10000 - 0.1)
+```
+```{r 08-predictor-design-df-2, message = FALSE, warning = FALSE}
+df
+```
+<center>
+```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Example of a dataset with a nonlinear relationship between the predictor and the response"}
 curve_plt <- ggplot(df, aes(x = x, y = y)) +
   geom_point() +
   xlab("x") +
