hidden seeds in regress 1

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -82,7 +82,7 @@ we want to answer. In this example, our question is again predictive:
 its sale price? A rigorous, quantitative answer to this question might help
 a realtor advise a client as to whether the price of a particular listing 
 is fair, or perhaps how to set the price of a new listing.
-We begin the analysis by loading and examining the data.
+We begin the analysis by loading and examining the data, and setting the seed value.
 
 ```{r 07-load, message = FALSE}
 library(tidyverse)
@@ -131,11 +131,15 @@ how well it predicts house sale price. This subsample is taken to allow us to
 illustrate the mechanics of KNN regression with a few data points; later in
 this chapter we will use all the data.
 
-To take a small random sample of size 30, we'll use the function `slice_sample`, and input the data frame to sample from and the number of rows to randomly select.
-\index{slice\_sample}
+To take a small random sample of size 30, we'll use the function
+`slice_sample`, and input the data frame to sample from and the number of rows
+to randomly select. \index{slice\_sample}
 
-```{r 07-sacramento}
+```{r 07-sacramento-seed, echo = FALSE, message = FALSE, warning = FALSE}
+# hidden seed
 set.seed(1234)
+```
+```{r 07-sacramento}
 small_sacramento <- slice_sample(sacramento, n = 30)
 ```
 
