hide seeds in reg2; added fake load packages

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -71,9 +71,10 @@ library(scales)
 library(gridExtra)
 library(caret)
 
+set.seed(2)
+
 sacramento <- read_csv("data/sacramento.csv")
 
-set.seed(2)
 small_sacramento <- sample_n(sacramento, size = 30)
 
 small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
@@ -177,7 +178,11 @@ As usual, we start by putting some test data away in a lock box that we
 can come back to after we choose our final model. Let's take care of that now.
 
 ```{r 08-test-train-split}
+library(tidyverse)
+library(tidymodels)
+
 set.seed(1234)
+
 sacramento_split <- initial_split(sacramento, prop = 0.6, strata = price)
 sacramento_train <- training(sacramento_split)
 sacramento_test <- testing(sacramento_split)
